# FEBAL_AUTOMATION_SCRIPT_TOOL

./: .env.example  .gitattributes  .gitignore  .wslconfig.example  CLAUDE.md
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_users.py  0002_targets.py  0003_llm_usage.py  0004_runs_executions.py  0005_explore_stop_reason.py  0006_scenarios.py  0007_execution_history.py  0008_heal_audit.py  0009_defects.py  0010_user_role.py
apps/api/app/: main.py  worker_main.py
apps/api/app/core/: checkpointer.py  config.py  crypto.py  es_client.py  llm_pricing.py  logging.py  metrics.py  neo4j_driver.py  redis_client.py  security.py  workspaces.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  defects.py  execution_history.py  heal_audit.py  llm_usage.py  run.py  scenario.py  target.py  user.py
apps/api/app/routers/: admin_llm.py  auth.py  coverage_dash.py  dashboards.py  defects.py  execute.py  executions.py  explore.py  generate.py  heals.py  health.py  kg.py  scenarios.py  search.py  stubs.py  targets.py  traceability.py  users.py
apps/api/app/schemas/: __init__.py  auth.py  coverage_dash.py  dashboards.py  defect.py  execution.py  heal.py  kg.py  llm.py  run.py  scenario.py  search.py  stub.py  target.py  traceability.py
apps/api/app/services/: coverage_dash.py  dashboards.py  exec_history.py  exec_service.py  execution.py  explorer.py  generation.py  llm_gateway.py  rbac.py  run_service.py  scenario_service.py  stability.py  target_service.py  traceability.py
apps/api/app/templates/: conftest.py.j2  data_model.py.j2  fixtures.py.j2  test_login.py.j2  utils.py.j2
apps/api/tests/: conftest.py
apps/api/tests/e2e/: test_login_ui.py  test_targets_ui.py
apps/api/tests/fixtures/: fake_es.py  kg_scenarios.py
apps/api/tests/functional/: test_artifact_capture.py  test_assertion_gate.py  test_auth.py  test_classifier_accuracy.py  test_codegen.py  test_codegen_markers.py  test_coverage_live.py  test_credential_security.py  test_determinism.py  test_element_repo.py  test_exec_history.py  test_execute.py  test_execute_tier.py  test_explore.py  test_explore_discovery.py  test_explore_events.py  test_generation.py  test_healing_mutations.py  test_health.py  test_inspec_heal.py  test_kg_endpoints.py  test_kg_idempotency.py  test_kg_schema.py  test_kill_drain.py  test_killswitch.py  test_live_exec.py  test_llm_log_safety.py  test_migration_0009.py  test_reset_target.py  test_run_thread.py  test_scenarios_router.py  test_search_live.py  test_seeded_bug.py  test_stability.py  test_surface.py  test_targets.py  test_usage_ledger.py  test_worker_consume.py
apps/api/tests/integration/: test_dashboards.py  test_defect_pipeline.py  test_defects_router.py  (+10 more)
(+434 files in other folders)
