[project]
name = "api"
version = "0.1.0"
description = "Autonomous QA Engineer Platform — FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.*",
    "argon2-cffi==25.1.*",
    "asyncpg==0.31.*",
    "cryptography==48.*",
    "fastapi==0.136.*",
    "greenlet==3.5.*",
    "httpx==0.28.*",
    "pydantic[email]==2.13.*",
    "pydantic-settings==2.14.*",
    "pyjwt==2.13.*",
    "redis==8.0.*",
    "sqlalchemy[asyncio]==2.0.*",
    "structlog==26.*",
    "uvicorn[standard]==0.49.*",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest==9.0.*",
    "pytest-asyncio==1.4.*",
    "pytest-playwright==0.8.*",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "functional: live-HTTP functional tests against the running stack (D-02)",
    "e2e: Playwright UI tests against the running web tier",
]

[tool.ruff]
line-length = 100
