[project]
name = "api"
version = "0.1.0"
description = "Autonomous QA Engineer Platform — FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.*",
    "argon2-cffi==25.1.*",
    "asyncpg==0.31.*",
    "cryptography==48.*",
    "fastapi==0.136.*",
    "greenlet==3.5.*",
    "httpx==0.28.*",
    "pydantic[email]==2.13.*",
    "pydantic-settings==2.14.*",
    "pyjwt==2.13.*",
    "redis==8.0.*",
    "sqlalchemy[asyncio]==2.0.*",
    "structlog==26.*",
    "uvicorn[standard]==0.49.*",
    "langchain==1.*",
    "langchain-anthropic==1.4.*",
    "langchain-openai==1.3.*",
    "tenacity==9.1.*",
    "tiktoken==0.13.*",
    "anthropic==0.109.*",
    "langsmith==0.8.*",
    "neo4j==6.2.*",
    "pytest-bdd==8.1.*",
    "jinja2==3.1.*",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest==9.0.*",
    "pytest-asyncio==1.4.*",
    "pytest-playwright==0.8.*",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Make the `app` package importable in tests run via `uv run pytest`
# (the pytest entrypoint script does not add the cwd to sys.path).
# "../.." adds the repo root so cross-service `shared.events` schemas resolve
# the same way they do in the api container (where shared/ is mounted at /app/shared).
pythonpath = [".", "../.."]
markers = [
    "functional: live-HTTP functional tests against the running stack (D-02)",
    "e2e: Playwright UI tests against the running web tier",
    "live_llm: needs real provider keys; skipped when absent; off the default gate",
    "graph: needs the neo4j graph profile active (run under graph_mode; web stopped)",
]

[tool.ruff]
line-length = 100
